--- a/tableofcontents.html
+++ b/tableofcontents.html
@@ -263,7 +263,7 @@
         <span class="text">6. A Letter to My Love</span>
       </li>
       <li onclick="navigateTo('thequestion.html')">
-        <span class="icon">💍</span>
+        <span class="icon">💖</span>
         <span class="text">7.My Question 😏</span>
       </li>
     </ul>
