--- a/thequestion.html
+++ b/thequestion.html
@@ -302,6 +302,7 @@
           .then((data) => {
             if (data.message) {
               alert("Your message has been sent ❤️");
+              window.location.href = 'index.html';
             } else {
               alert("Something went wrong. Try again later.");
             }
